syntax = "proto3";

package com.cognite.client.dto;

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

import "geometry.proto";

message FileContainer {
    FileMetadata file_metadata = 1;
    FileBinary file_binary = 2;
}

message FileMetadata {
    optional string external_id = 1;
    optional string name = 2;
    optional string directory = 3;
    optional string source = 4;
    optional string mime_type = 5;
    map<string, string> metadata = 6;
    repeated int64 asset_ids = 7;
    optional int64 id = 8;
    bool uploaded = 9;
    optional int64 uploaded_time = 10;
    optional int64 created_time = 11;
    optional int64 last_updated_time = 12;
    optional int64 source_created_time = 13;
    optional int64 source_modified_time = 14;
    optional int64 data_set_id = 15;
    repeated int64 security_categories = 16;
    repeated string labels = 17;
    optional geo.Feature geo_location = 18;
}

message FileBinary {
    oneof idType {
        int64 id = 1;
        string external_id = 2;
    }

    oneof binaryType {
        bytes binary = 3;
        string binary_uri = 4;
    }
    int64 content_length = 5;
}